# NN.cpp

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
include/: layer.hpp  matrix.hpp  network.hpp  utils.hpp  vector.hpp  vendors.hpp
src/: layer.cpp  main.cpp  matrix.cpp  network.cpp  utils.cpp  vector.cpp  vendors.cpp
